@@ -582,6 +582,7 @@ Localization
         #LOC_BDArmory_PIDAutoTuningNumSamples = Auto-Tuning Number Of Samples
         #LOC_BDArmory_PIDAutoTuningFastResponseRelevance = Auto-Tuning Fast Response Relevance
         #LOC_BDArmory_PIDAutoTuningInitialLearningRate = Auto-Tuning Initial Learning Rate
+        #LOC_BDArmory_PIDAutoTuningInitialRollRelevance = Auto-Tuning Initial Roll Relevance
         #LOC_BDArmory_PIDAutoTuningSpeed = Auto-Tuning Speed
         #LOC_BDArmory_PIDAutoTuningAltitude = Auto-Tuning Altitude
         #LOC_BDArmory_PIDAutoTuningRecenteringDistance = Auto-Tuning Recentering Distance (km)
@@ -742,6 +743,7 @@ Localization
         #LOC_BDArmory_AIWindow_PIDAutoTuningFastResponseRelevanceMin = <- Better damping
         #LOC_BDArmory_AIWindow_PIDAutoTuningFastResponseRelevanceMax = Faster response ->
         #LOC_BDArmory_AIWindow_PIDAutoTuningInitialLearningRateContext = Lower this if the changes in the PID values are too large
+        #LOC_BDArmory_AIWindow_PIDAutoTuningInitialRollRelevanceContext = How much the roll errors contribute to the loss
         #LOC_BDArmory_AIWindow_PIDAutoTuningAltitudeContext = Try to stay within ±min altitude of this
         #LOC_BDArmory_AIWindow_PIDAutoTuningSpeedContext = Target speed for auto-tuning at
         #LOC_BDArmory_AIWindow_PIDAutoTuningRecenteringDistanceContext = Distance from start at which re-centering is triggered
@@ -800,6 +802,7 @@ Localization
         #LOC_BDArmory_AIWindow_PIDAutoTuningNumSamples = A-T Num Samples
         #LOC_BDArmory_AIWindow_PIDAutoTuningFastResponseRelevance = A-T Fast Response
         #LOC_BDArmory_AIWindow_PIDAutoTuningInitialLearningRate = A-T Initial LR
+        #LOC_BDArmory_AIWindow_PIDAutoTuningInitialRollRelevance = A-T Initial RR
         #LOC_BDArmory_AIWindow_PIDAutoTuningSpeed = A-T Speed
         #LOC_BDArmory_AIWindow_PIDAutoTuningAltitude = A-T Altitude
         #LOC_BDArmory_AIWindow_PIDAutoTuningRecenteringDistance = A-T Recentering Distance
@@ -855,7 +858,7 @@ Localization
         #LOC_BDArmory_AIWindow_PidHelp_Steerdamp = Steer Damp (D) - This is the derivative value; this is how much the craft's rotation to a new orientation will be damped out. Too low, and the craft will oscillate due to overshooting the correct orientation. Too high, and the damping will counter too much of the change in orientation, and craft will not turn as fast.
         #LOC_BDArmory_AIWindow_PidHelp_Dyndamp = Dynamic Damping - This dynamically adjusts Damping, from the min damping value to the max damping value, based on angle to target. The lower the value, the more linear the dynamic damping value as target angle changes, the higher the value, the more damping will be reduced when pointing away from a target, and increased when pointing near a target. This applies to all three control axes. For individual control Axis damping, enable the relevant Pitch/Roll/Yaw Dynamic Damping.
         #LOC_BDArmory_AIWindow_PidHelp_AutoTune = PID Auto-Tune - This enables an automated PID tuning mode where the AI will use gradient descent to optimize the plane's ability to turn to a range of headings and stabilize in those directions.
-        #LOC_BDArmory_AIWindow_PidHelp_AutoTune_details = \n    - The loss being minimized is ∫f(x,θ)dθ over the range θ ∈ (30°,120°) (using the midpoint Riemann sum), where f(x,θ) is\n        ∫(δp²·(α+t²)/θ² + γ·δr²·(α+t)/100/θ)dt\nfor the current PID values (x) and heading change (θ), where δp is the pointing error, δr is the roll error, α is the fast response relevance and γ is the roll relevance (which is automatically adjusted over time to balance the contribution from the pointing and roll errors).\n    - Usage: Once the plane is airborne (and not in combat), enable auto-tuning and set the sliders to the desired values (the defaults are reasonable starting points and can be preset in the SPH; adjusting some of the sliders will restart the auto-tuning), then allow the auto-tuning to run until it stops automatically when the learning rate (LR) decreases to below 1e-3. The PID values will revert to those giving the lowest loss and these will be stored so they can be restored in the SPH.\n    - Parameters: Num Samples - The number of heading changes (θ) used in the Riemann sum; higher values will decrease noise in the gradient. Fast Response (α) - How much to weight the early pointing and roll errors. Initial LR - The initial learning rate. Altitude and Speed - The target altitude and speed to use while tuning. Recentering Distance - The distance from the start (in km) at which the craft will return to the starting area between epochs. Fixed P - Keep P fixed and only tune the other fields. Clamp Max - Keep the tuned values within the limits of the sliders.\n    - Recommendations: 1. Set the auto-tuning altitude and speed to those expected to be used in combat. 2. Use 5-10x time-scaling. 3. Avoid mountainous terrain. 4. Tune without dynamic damping first and use the result as the starting point for dynamic damping with all the damping values set to the tuned static damping value and the dynamic damping factors set to 1. 5. Since the PID values are (currently) being optimized for flying to fixed points, the tuned I value may not be optimal for moving targets in combat and a slightly larger I may be desirable.
+        #LOC_BDArmory_AIWindow_PidHelp_AutoTune_details = \n    - The loss being minimized is ∫f(x,θ)dθ over the range θ ∈ (30°,120°) (using the midpoint Riemann sum), where f(x,θ) is\n        ∫(δp²·(α+t²)/θ² + γ·δr²·(α+t)/100/θ)dt\nfor the current PID values (x) and heading change (θ), where δp is the pointing error, δr is the roll error, α is the fast response relevance and γ is the roll relevance (which is automatically adjusted over time to balance the contribution from the pointing and roll errors).\n    - Usage: Once the plane is airborne (and not in combat), enable auto-tuning and set the sliders to the desired values (the defaults are reasonable starting points and can be preset in the SPH; adjusting some of the sliders will restart the auto-tuning), then allow the auto-tuning to run until it stops automatically when the learning rate (LR) decreases to below 1e-3. The PID values will revert to those giving the lowest loss and these will be stored so they can be restored in the SPH.\n    - Parameters: Num Samples - The number of heading changes (θ) used in the Riemann sum; higher values will decrease noise in the gradient. Fast Response (α) - How much to weight the early pointing and roll errors. Initial LR and RR - The initial learning rate and roll relevance (RR will auto-update to that of the best tuning). Altitude and Speed - The target altitude and speed to use while tuning. Recentering Distance - The distance from the start (in km) at which the craft will return to the starting area between epochs. Fixed P - Keep P fixed and only tune the other fields. Clamp Max - Keep the tuned values within the limits of the sliders.\n    - Recommendations: 1. Set the auto-tuning altitude and speed to those expected to be used in combat. 2. Use 5-10x time-scaling. 3. Avoid mountainous terrain. 4. Tune without dynamic damping first and use the result as the starting point for dynamic damping with all the damping values set to the tuned static damping value and the dynamic damping factors set to 1. 5. Since the PID values are (currently) being optimized for flying to fixed points, the tuned I value may not be optimal for moving targets in combat and a slightly larger I may be desirable.
 
         #LOC_BDArmory_AIWindow_AltHelp = Altitude settings control the desired flight envelope of the AI
         #LOC_BDArmory_AIWindow_AltHelp_Def = Default Altitude - This is the Altitude the AI will seek to return to when not in combat or extending.
